# loot-of-lima-solver

./: .pre-commit-config.yaml  README.md  pyproject.toml  solver.code-workspace
.github/workflows/: python-package.yml  semantic-pr.yml
src/: board.py  enums.py  game.py  info.py
src/loot_of_lima_solver/: board.py  exceptions.py  game.py  information.py
test/: test_board.py  test_game.py
