[tool.poetry]
name = "loot-of-lima-solver"
version = "0.1.0"
description = ""
authors = ["Lucas Lee <replicat@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PuLP = "^2.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
