[tool.poetry]
name = "loot-of-lima-solver"
version = "0.1.0"
description = "A solver for the board game 'Loot of Lima'."
authors = ["Lucas Lee <replicat@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/replicat/loot-of-lima-solver"

[tool.poetry.dependencies]
python = "^3.9"
PuLP = "^2.6.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
